--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "php-parallel-lint/php-parallel-lint": "^1.1",
         "phpstan/phpstan": "^0.12.11",
         "oxid-esales/oxideshop-ce": "6.5",
-        "oxid-esales/oxideshop-unified-namespace-generator": "^2.0"
+        "oxid-esales/oxideshop-unified-namespace-generator": "^2.0",
+        "sensiolabs-de/deptrac-shim": "^0.6.0|^0.8.2"
     },
     "prefer-stable": true,
     "autoload": {
@@ -43,11 +44,13 @@
         "test:syntax": "parallel-lint src/ tests/ metadata.php",
         "test:static": "phpstan analyse src/",
         "test:unit": "phpunit -c tests/phpunit.xml tests/Unit/",
+        "test:deptrac": "vendor/bin/deptrac",
         "test": [
             "@test:syntax",
             "@test:lint",
             "@test:static",
-            "@test:unit"
+            "@test:unit",
+            "@test:deptrac"
         ],
         "post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
         "post-update-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility"
