--- a/composer.json
+++ b/composer.json
@@ -23,16 +23,17 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5.20|^8.5|^9",
-        "squizlabs/php_codesniffer": "^3.5.1",
+        "friendsofphp/php-cs-fixer": "^2.16.1",
         "phpcompatibility/php-compatibility": "*",
         "php-parallel-lint/php-parallel-lint": "^1.1",
-        "phpstan/phpstan": "^0.12.11",
+        "phpstan/phpstan": "^0.12.26",
         "oxid-esales/oxideshop-ce": "6.5",
         "oxid-esales/oxideshop-unified-namespace-generator": "^2.0",
         "sensiolabs-de/deptrac-shim": "^0.6.0|^0.8.2",
-        "oxid-esales/oxideshop-doctrine-migration-wrapper": "^v3.1.0"
+        "oxid-esales/oxideshop-doctrine-migration-wrapper": "^v3.1.0",
+        "codeception/module-asserts": "*"
     },
-    "prefer-stable": true,
+    "prefer-stable": false,
     "autoload": {
         "psr-4": {
             "OxidEsales\\GraphQL\\Checkout\\": "src",
@@ -41,10 +42,13 @@
         }
     },
     "scripts": {
-        "fix": "phpcbf",
-        "test:lint": "phpcs",
+        "fix:fixer": "php-cs-fixer fix",
+        "fix": [
+            "@fix:fixer"
+        ],
+        "test:lint": "php-cs-fixer fix --dry-run",
         "test:syntax": "parallel-lint src/ tests/ metadata.php",
-        "test:static": "phpstan analyse src/",
+        "test:static": "phpstan --memory-limit=-1 analyse src/",
         "test:unit": "phpunit -c tests/phpunit.xml tests/Unit/",
         "test:deptrac": "vendor/bin/deptrac",
         "test": [
@@ -53,8 +57,6 @@
             "@test:static",
             "@test:unit",
             "@test:deptrac"
-        ],
-        "post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
-        "post-update-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility"
+        ]
     }
 }
