--- a/tests/Codeception/acceptance.suite.yml
+++ b/tests/Codeception/acceptance.suite.yml
@@ -4,7 +4,6 @@ path: Acceptance
 modules:
   enabled:
     - Asserts
-    - OxidEsales\GraphQL\Base\Tests\Codeception\Module\AcceptanceHelper
     - OxidEsales\GraphQL\Checkout\Tests\Codeception\Helper\Acceptance
     - REST:
         url: '%SHOP_URL%'
@@ -21,3 +20,6 @@ modules:
                   Name: XDEBUG_SESSION
                   Value: PHPSTORM
                   HttpOnly: false
+    - \OxidEsales\GraphQL\Base\Tests\Codeception\Module\AcceptanceHelper:
+        depends:
+            - REST
