--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ env:
     - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-ansi --no-progress --no-suggest"
 
 before_install:
+    - composer self-update --1
     - phpenv config-rm xdebug.ini
 
 install:
