--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^7.1",
         "oxid-esales/graphql-base": "dev-master",
         "oxid-esales/graphql-catalogue": "dev-master",
-        "oxid-esales/graphql-account": "dev-master"
+        "oxid-esales/graphql-account": "dev-master-payment_cost-OXDEV-4144"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5.20|^8.5|^9",
