OXDEV-4164 Validate Payment before storing into database

--- a/services.yaml
+++ b/services.yaml
@@ -6,7 +6,7 @@ services:
 
     OxidEsales\GraphQL\Checkout\:
         resource: 'src/*'
-        exclude: 'src/**/{DataType,Exception}'
+        exclude: 'src/**/{DataType,Exception,Shop}'
         public: true
 
     OxidEsales\GraphQL\Checkout\Shared\Service\NamespaceMapper:
