--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     },
     "require": {
         "php": "^7.1",
-        "oxid-esales/graphql-base": "dev-master",
-        "oxid-esales/graphql-catalogue": "dev-master",
-        "oxid-esales/graphql-account": "dev-master"
+        "oxid-esales/graphql-base": "dev-master-fix_tests-OXDEV-4225",
+        "oxid-esales/graphql-catalogue": "dev-master-ci-OXDEV-4225",
+        "oxid-esales/graphql-account": "dev-master-ci-OXDEV-4225"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5.20|^8.5|^9",
